Remove legacy dependencies
- Replace jsonschemafriend with com.networknt:json-schema-validator
  which is already used in Policy Parent
- Remove misplaced "uniqueItems" keyword from operational policy
  schema (caused false validation failures with the new library)
- Remove the following dependencies and replace with standard Java:
  commons-io, commons-beanutils, guava, plexus-utils

Issue-ID: POLICY-5592
Change-Id: Ib5c5cd2921f8788f228990fde221bf3e6ebc16b0
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>